[package]
authors = ["Jakob Lautrup Nysom <jako3047@gmail.com>"]
name = "cargo-linebreak"
version = "1.0.1"
description = "A cargo subcommand for printing linebreaks when using cargo-watch"
repository = "https://github.com/Machtan/cargo-linebreak"
readme = "README.md"
keywords = ["cargo", "subcommand"]
license = "MIT OR Apache-2.0"

[dependencies]
argparse = "0.2.1"
